Redesigned service-worker mails, to fix overflowing of the mail-text, have a title and text be displayed as a text block

--- a/Stromzähler/static/Management.css
+++ b/Stromzähler/static/Management.css
@@ -42,3 +42,8 @@
 .mails {
     word-wrap: break-word;
 }
+
+.mail-body {
+    word-break: break-all!important;
+    word-wrap: break-word!important;
+}
